force-app/main/default/objects/Shift__c/Shift__c.object-meta.xml
<CustomObject>
    <label>Shift</label>
    <nameField>
        <displayFormat>SHIFT-{0000}</displayFormat>
        <label>Shift ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>