force-app/main/default/objects/Shift__c/fields/Break_Count__c.field-meta.xml
<CustomField>
    <fullName>Break_Count__c</fullName>
    <label>Break Count</label>
    <summaryFilterItems>
        <field>Time_Entry__c.Entry_Type__c</field>
        <operation>equals</operation>
        <value>Break</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Time_Entry__c.Entry_Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Shift__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>