force-app/main/default/objects/Shift__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>Time_Card__r.Employee__r.FirstName + &quot; &quot; +  Time_Card__r.Employee__r.LastName</formula>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>