force-app/main/default/objects/Shift__c/fields/Employee_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_User_ID__c</fullName>
    <formula>CASESAFEID(Time_Card__r.Employee__r.Id)</formula>
    <label>Employee User ID</label>
    <type>Text</type>
</CustomField>