force-app/main/default/objects/Shift__c/fields/Incomplete_Entries__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Entries__c</fullName>
    <label>Incomplete Entries</label>
    <summaryFilterItems>
        <field>Time_Entry__c.Entry_Complete__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Shift__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>