force-app/main/default/objects/Shift__c/fields/Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(Shift_Start_Time__c)), 
DATEVALUE( Shift_Start_Time__c ),
DATEVALUE( CreatedDate )

)</formula>
    <label>Shift Date</label>
    <type>Date</type>
</CustomField>