force-app/main/default/objects/Shift__c/fields/Shift_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Time__c</fullName>
    <label>Shift End Time</label>
    <summarizedField>Time_Entry__c.End_Date_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Entry__c.Entry_Type__c</field>
        <operation>equals</operation>
        <value>Work</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Shift__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>