force-app/main/default/objects/Shift__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Shift_Date__c  = TODAY(), &quot;In Progress&quot;,
IF( Incomplete_Entries__c &gt; 0, &quot;Needs Review&quot;,
&quot;Complete&quot;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>