force-app/main/default/objects/Shift__c/fields/Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Time_Card__c</fullName>
    <label>Time Card</label>
    <referenceTo>Time_Card__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>