force-app/main/default/objects/Shift__c/fields/Total_Break_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Hours__c</fullName>
    <label>Total Break Hours</label>
    <summarizedField>Time_Entry__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Entry__c.Entry_Type__c</field>
        <operation>equals</operation>
        <value>Break</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Shift__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>