force-app/main/default/objects/Shift__c/fields/Total_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Hours__c</fullName>
    <formula>Total_Hours__c -  Total_Lunch_Hours__c</formula>
    <label>Total Work Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>