force-app/main/default/objects/Shift__c/listViews/Incomplete_Shifts.listView-meta.xml
<ListView>
    <fullName>Incomplete_Shifts</fullName>
    <columns>NAME</columns>
    <columns>Time_Card__c</columns>
    <columns>Shift_Date__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Incomplete_Entries__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Total_Work_Hours__c</columns>
    <columns>Total_Lunch_Hours__c</columns>
    <columns>Total_Break_Hours__c</columns>
    <columns>Shift_Start_Time__c</columns>
    <columns>Shift_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incomplete_Entries__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>Incomplete Shifts</label>
</ListView>